# solana-stablecoin-bounty

./: .gitignore  Anchor.toml  COMPLETION.md  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  LICENSE  PR_DESCRIPTION.md  PR_TEMPLATE.md  QUICKSTART.md  README.md  extract_discriminators.py  package-lock.json  package.json  sss-token.bundle  test-init.js
.agent/workflows/: deploy-devnet.md
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
app/: README.md  index.html  package-lock.json  package.json  test-anchor.js  test-devnet.js  test-init.js  test-results.json  test-simple.js
app/src/app/: layout.tsx  page.tsx
app/src/components/: WalletContext.tsx
backend/: README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/docker/: Dockerfile.api  Dockerfile.compliance  Dockerfile.indexer
backend/src/: api-server.ts  indexer.ts  webhook.ts
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: cli.ts  index.ts  privacy.ts
demo/: README.md  sss-demo.cast
deployments/: devnet.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  PRIVACY.md  REQUIREMENTS_TRACEABILITY.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  TESTING.md  diagrams.md
examples/: 01-basic-sss1.ts  02-minting-with-rbac.ts  03-sss2-compliance.ts  04-lifecycle-upgrade.ts  05-emergency-operations.ts  06-batch-operations.ts  07-multisig-governance.ts  08-batch-compliance.ts  09-role-delegation.ts  10-advanced-transfer.ts
programs/sss-token/: Cargo.toml
programs/sss-token/src/: lib.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
programs/sss2_hook/: Cargo.toml
programs/sss2_hook/src/: lib.rs
scripts/: README.md  demo.sh  deploy-devnet.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: ComplianceModule.ts  MultisigModule.ts  PrivacyModule.d.ts  PrivacyModule.js  PrivacyModule.ts  RoleManager.ts  SolanaStablecoin.ts  index.ts  oracle.ts  sss1.ts  sss2.ts  sss3.d.ts  sss3.js  sss3.ts  types.d.ts  types.js  types.ts  utils.ts
tests/: README.md  fuzz.test.ts  privacy.test.ts  run-tests.sh  sss-1.test.ts  sss-2.test.ts  sss2_hook.ts
tests/sss-1/: burn.test.ts  freeze.test.ts  initialize.test.ts  mint.test.ts
tests/sss-2/: blacklist.test.ts  seize.test.ts  transfer-hook.test.ts
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: index.tsx
(+18 files in other folders)
